--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   </div>
 
   <div
-    style="z-index: -1; position: fixed; top: 0; left: 0; width: 100vw; height: 96vh; display: flex; flex-direction: column; justify-content: center; padding: 1rem;">
-    <h2 style="text-align: center; font-size: 1rem; font-weight: 500;">
+    style="z-index: -1; position: fixed; top: 0; left: 0; width: 100vw; height: 96vh; display: flex; flex-direction: column; justify-content: center; padding: 16px;">
+    <h2 style="text-align: center; font-size: 16px; font-weight: 500;">
       One Level Studio
     </h2>
-    <h1 style="text-align: center; font-size: 7rem; font-weight: 700; line-height: 1.4;" class="desktop-only">
+    <h1 style="text-align: center; font-size: 112px; font-weight: 700; line-height: 1.4;" class="desktop-only">
       Notionism
     </h1>
-    <h1 style="text-align: center; font-size: 2.5rem; font-weight: 700; line-height: 1.4;" class="mobile-only">
+    <h1 style="text-align: center; font-size: 40px; font-weight: 700; line-height: 1.4;" class="mobile-only">
       Notionism
     </h1>
     <div class="desktop-only">
@@ -34,13 +34,13 @@
       <br>
       <br>
     </div>
-    <h2 style="text-align: center; font-size: 1rem; font-weight: 500;">
+    <h2 style="text-align: center; font-size: 16px; font-weight: 500;">
       Embeddable widgets/mini-apps for your aesthetic Notion pages ✨
     </h2>
-    <h2 style="text-align: center; font-size: 1rem; font-weight: 500;">
+    <h2 style="text-align: center; font-size: 16px; font-weight: 500;">
       Lightweight - Minimal Design - Simple Use
     </h2>
-    <h2 style="text-align: center; font-size: 1rem; font-weight: 500; color: gray; font-style: italic;">
+    <h2 style="text-align: center; font-size: 16px; font-weight: 500; color: gray; font-style: italic;">
       This project is in very early idea/development stage
     </h2>
     <br>
